--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
         </nav>
 
         <div class="content">
-          <h1 class="title">Music Soul</h1>
-          <p id="content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-            laboriosam magni omnis eveniet atque harum.
-          </p>
-          <div class="btn">
-            <button>Order Now</button>
+          <div class="inner-content-container">
+            <h1 class="title">Music Soul</h1>
+            <p id="content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
+              laboriosam magni omnis eveniet atque harum.
+            </p>
+            <div class="btn">
+              <button>Order Now</button>
+            </div>
           </div>
         </div>
       </div>
